--- a/style.css
+++ b/style.css
@@ -173,8 +173,8 @@ footer .sectionwrapper .col {
 
 
 footer .col img {
-    height: 30px;
-    width: 30px;
+    height: 50px;
+    width: 50px;
     padding: 4px 6px 10px 0;
     margin: 10px;
 
@@ -274,7 +274,7 @@ footer a {
 
 #portfolio img:hover {
     transition: .5s ease;
-    transform: scale(1.3) translateY(10px);
+    transform: scale(1.3) translateY(14px);
 }
 
 
@@ -326,6 +326,7 @@ footer a {
     color: white;
     padding: 10px;
     margin-left: 10px;
+    border-radius: 10px;
     /*
     margin-top: 20px;
     margin-right: 30px;
@@ -378,6 +379,9 @@ footer a {
 /***** TILFÆLLES INDSTILLINGER SLUT *****/
 
 /***** WEB START *****/
+section {
+    margin-bottom: 200px;
+}
 
 
 #web .sectionwrapper {
@@ -387,13 +391,18 @@ footer a {
 
 }
 
-.ipad img {
-    width: 50%;
-}
-
-#web .col {
+#web .col_narrow {
     flex-grow: 1;
     flex-basis: 300px;
+
+}
+
+
+#web .col_wide {
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 3;
+    flex-basis: 800px;
 
 }
 
@@ -430,6 +439,10 @@ footer a {
 }
 
 
+#web .col_pic {
+    flex-grow: 1;
+    flex-basis: 80px;
+}
 
 
 
@@ -452,7 +465,8 @@ footer a {
 }
 
 #web .col_right,
-#ux .col_right {
+#ux .col_right,
+#animation .col_right {
     display: flex;
     flex-wrap: wrap;
     flex-grow: 1;
@@ -461,17 +475,19 @@ footer a {
 
 
 #web .col_left,
-#ux .col_left {
+#ux .col_left,
+#animation .col_left {
 
     flex-grow: 1;
     flex-basis: 300px;
 }
 
-#web .col_pic,
+
 #ux .col_pic {
     flex-grow: 1;
     flex-basis: 200px;
 }
+
 
 #ux h1 {
     text-align: center;
@@ -952,7 +968,7 @@ footer a {
         width: 10rem;
         height: 1rem;
 
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         font-weight: 300;
         padding: 20px;
         margin-left: 10px;
@@ -976,8 +992,14 @@ footer a {
     #ux p,
     #animation p,
     #indhold p {
-        margin-bottom: 100px;
+        margin-bottom: 150px;
+        letter-spacing: 1px;
     }
+
+    #ux h3 {
+        letter-spacing: 1.5px;
+    }
+
 
 
 
